Fix scroll broken on Mac: restore height:100vh on banner
Revert min-height change that broke GSAP ScrollTrigger.
Keep padding-top on banner-content to prevent text hiding behind navbar.

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -656,11 +656,10 @@ banner
 
 ------------------------------------------- */
 .mil-banner {
-    min-height: 100vh;
+    height: 100vh;
 
     & .container {
         height: 100%;
-        min-height: 100vh;
         display: flex;
         align-items: flex-end;
     }
